# ai-tool-mcp

./: .env.example  .gitignore  LICENSE  README.md  code_quality_check.py  mcp.json  pyproject.toml  requirements.txt  server.py  核心.md
core/: __init__.py  config.py  file_downloader.py  file_option.py  path_validator.py  powershell_core.py  security_validator.py  session_manager.py  system_monitor.py
services/: __init__.py  base_service.py  download_service.py  file_service.py  powershell_gui.py  powershell_service.py  system_service.py
tests/: __init__.py  test_simplified_server.py
